--- a/example/app.json
+++ b/example/app.json
@@ -14,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "expo.modules.alarms.example"
+      "bundleIdentifier": "expo.modules.alarms.example",
+      "infoPlist": {
+        "NSAlarmKitUsageDescription": "This app uses alarms to help you manage your time and stay organized."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -27,7 +30,6 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    },
-    "plugins": [["../app.plugin.js", { "apiKey": "hello world" }]]
+    }
   }
 }
